--- a/works/sample/index.njk
+++ b/works/sample/index.njk
@@ -35,27 +35,25 @@ layout: layouts/base.njk
     <div class="relative z-40 w-full bg-white dark:bg-[#181818]">
       <div class="grid grid-cols-1 sm:grid-cols-2 px-5 md:px-8 py-8">
         <div>
-          <h1 class="text-4xl sm:text-5xl 2xl:text-6xl font-regular text-neutral-300 dark:text-neutral-700 mb-6 tracking-tight">
-            Through All Seasons 
-            {# <br>
-            <span class="text-neutral-300 dark:text-neutral-600">(2023)</span> #}
+          <div class="mb-4 text-base text-neutral-400 dark:text-neutral-600">Through All Seasons</div>
+          <h1 class="text-4xl sm:text-5xl 2xl:text-6xl font-regular mb-6 tracking-tight text-transparent bg-clip-text bg-gradient-to-r from-purple-400 to-pink-600 ">
+            A seamless transition <br>across all seasons
           </h1>
-          {# <div class="w-9 h-[2px] mb-12 bg-neutral-700 dark:bg-neutral-200"></div> #}
         </div>
         <div>
           <div x-data="{ open: false }">
-            <p class="mb-5 last:mb-0 w-full max-w-[600px] 2xl:max-w-[700px] text-black/50 dark:text-white/50 text-base 2xl:text-lg leading-snug font-medium">
+            <p class="mb-5 last:mb-0 w-full max-w-[600px] 2xl:max-w-[700px] text-black/50 dark:text-white/50 text-justify text-base 2xl:text-lg leading-snug font-medium">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam at ligula pharetra, viverra nisi eget, venenatis metus. Curabitur ante odio, pellentesque posuere ipsum volutpat, consectetur dignissim lacus. Vestibulum ut faucibus risus. Aliquam dignissim ligula eu ornare vulputate. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
             </p>
 
             <a x-show="!open" @click="open = true" class="font-medium text-base 2xl:text-lg dark:text-neutral-200 dark:hover:text-neutral-300 cursor-pointer">Read more</a>
 
             <div x-show="open" x-transition.opacity>
-              <p class="mb-5 last:mb-0 w-full max-w-[600px] 2xl:max-w-[700px] text-black/50 dark:text-white/50 text-base 2xl:text-lg leading-snug font-medium">
+              <p class="mb-5 last:mb-0 w-full max-w-[600px] 2xl:max-w-[700px] text-black/50 dark:text-white/50 text-justify text-base 2xl:text-lg leading-snug font-medium">
                 Nulla lacinia, ex in hendrerit vehicula, elit est varius erat, vitae rutrum quam nulla eget nibh. Curabitur sollicitudin sodales leo id sollicitudin. Maecenas nec lorem at massa venenatis vestibulum. In hac habitasse platea dictumst. Proin non tortor non eros aliquam pretium quis eu metus.
               </p>
 
-              <p class="mb-5 last:mb-0 w-full max-w-[600px] 2xl:max-w-[700px] text-black/50 dark:text-white/50 text-base 2xl:text-lg leading-snug font-medium">
+              <p class="mb-5 last:mb-0 w-full max-w-[600px] 2xl:max-w-[700px] text-black/50 dark:text-white/50 text-justify text-base 2xl:text-lg leading-snug font-medium">
                 I'm always curious to hear from new people about new thoughts, ideas, problems, projects or collaborations. Proin non tortor non eros aliquam pretium quis eu metus.
               </p>
             </div>
