--- a/about.njk
+++ b/about.njk
@@ -28,8 +28,8 @@ layout: layouts/base.njk
     <div class="relative z-40 w-full bg-white dark:bg-[#181818]">
       <div class="grid grid-cols-1 sm:grid-cols-2 px-5 md:px-8 py-8">
         <div>
-          <div class="mb-4 text-base text-neutral-300 dark:text-neutral-700">Introduction</div>
-          <h1 class="text-4xl sm:text-5xl 2xl:text-6xl font-regular text-neutral-300 dark:text-neutral-700 mb-6 tracking-tight">
+          <div class="mb-4 text-base text-neutral-400 dark:text-neutral-600 font-medium">Introduction</div>
+          <h1 class="text-4xl sm:text-5xl 2xl:text-6xl font-regular mb-6 tracking-tight text-transparent bg-clip-text bg-gradient-to-r from-purple-400 to-pink-600">
             Who knows <br>what's possible <br>tomorrow
           </h1>
         </div>
@@ -177,12 +177,10 @@ layout: layouts/base.njk
 
       <div class="grid grid-cols-1 sm:grid-cols-2 px-5 md:px-8 py-8">
         <div>
-          <h1 class="text-4xl sm:text-5xl 2xl:text-6xl font-regular text-neutral-300 dark:text-neutral-700 mb-6 tracking-tight">
-            Capability
-            {# <br>
-            <span class="text-neutral-300 dark:text-neutral-600">(2023)</span> #}
+          <div class="mb-4 text-base text-neutral-400 dark:text-neutral-600 font-medium">Capability</div>
+          <h1 class="text-4xl sm:text-5xl 2xl:text-6xl font-regular mb-6 tracking-tight text-transparent bg-clip-text bg-gradient-to-r from-yellow-400 to-orange-600">
+            Broadly technical <br>designs across <br>all mediums
           </h1>
-          {# <div class="w-9 h-[2px] mb-12 bg-neutral-700 dark:bg-neutral-200"></div> #}
           
         </div>
 
