--- a/works/sample/index.njk
+++ b/works/sample/index.njk
@@ -35,8 +35,8 @@ layout: layouts/base.njk
     <div class="relative z-40 w-full bg-white dark:bg-[#181818]">
       <div class="grid grid-cols-1 sm:grid-cols-2 px-5 md:px-8 py-8">
         <div>
-          <div class="mb-4 text-base text-neutral-400 dark:text-neutral-600">Through All Seasons</div>
-          <h1 class="text-4xl sm:text-5xl 2xl:text-6xl font-regular mb-6 tracking-tight text-transparent bg-clip-text bg-gradient-to-r from-purple-400 to-pink-600 ">
+          <div class="mb-4 text-base text-neutral-400 dark:text-neutral-600 font-medium">Through All Seasons</div>
+          <h1 class="text-4xl sm:text-5xl 2xl:text-6xl font-regular mb-6 tracking-tight text-transparent bg-clip-text bg-gradient-to-r from-purple-400 to-pink-600">
             A seamless transition <br>across all seasons
           </h1>
         </div>
