--- a/index.njk
+++ b/index.njk
@@ -192,10 +192,10 @@ layout: layouts/base.njk
 
       <ul class="grid grid-cols-2 md:grid-cols-4 lg:grid-cols-5 2xl:grid-cols-6 gap-0.5 sm:gap-1">
         <li class="bg-[#F6F6F6] dark:bg-[#1B1B1B] overflow-hidden" x-show="filterID == 'all' || filterID == 'branding'" x-transition.enter.duration.600ms>
-          <a href="/works/sample" class="relative flex items-center justify-center aspect-square xl:aspect-[4/3] group/thumb">
+          <a href="/works/siwan" class="relative flex items-center justify-center aspect-square xl:aspect-[4/3] group/thumb">
             <div class="relative w-[60%] xl:w-[50%] aspect-square rounded-tr-full rounded-bl-full rounded-br-full overflow-hidden">
-              <div class="bg-white w-[100%] h-[100%] rounded-full"></div>
-              <img src="/assets/img/works/sample/sample-thumb.png" class="absolute top-0 left-0 max-w-none w-[100%] h-[100%] ml-[15%] group-hover/thumb:ml-[5%] mt-[5%] duration-200">
+              <div class="bg-[#c69874] w-[100%] h-[100%] rounded-full"></div>
+              <img src="/assets/img/works/siwan/siwan-thumb.png" class="absolute top-0 left-0 max-w-none w-[100%] h-[100%] ml-[15%] group-hover/thumb:ml-[5%] mt-[5%] duration-200">
             </div>
           </a>
         </li>
