--- a/_includes/layouts/work.njk
+++ b/_includes/layouts/work.njk
@@ -32,8 +32,8 @@ layout: layouts/base.njk
 
 
     <div class="relative z-40 w-full bg-white dark:bg-[#181818]">
-      <div class="grid grid-cols-1 sm:grid-cols-2 px-5 md:px-8 py-8 sm:gap-10">
-        <div>
+      <div class="grid grid-cols-1 sm:grid-cols-2 px-5 md:px-8 py-8">
+        <div class="sm:pr-8">
           <div class="mb-4 text-base text-neutral-400 dark:text-neutral-600 font-medium">
             {{ title }}
           </div>
