--- a/index.njk
+++ b/index.njk
@@ -104,8 +104,8 @@ layout: layouts/base.njk
       </div> #}
 
       <div class="grid grid-cols-1 md:grid-cols-2 px-5 md:px-8 py-8">
-        <h3 class="mb-8 md:mb-0 w-full max-w-[520px] 2xl:max-w-[600px] text-black/50 dark:text-white/50 text-base 2xl:text-lg leading-snug font-medium">
-          Jin Su Park is a multi-disciplinary Product Designer and Developer based in New York. His work elevates brand clarity and product potential through thoughtful visual dialogue, and incredible attention to detail.
+        <h3 class="mb-8 md:mb-0 w-full max-w-[500px] 2xl:max-w-[600px] text-black/50 dark:text-white/50 text-base 2xl:text-lg leading-snug font-medium">
+          Jin Su Park is a multi-disciplinary Product Designer and Developer based in New York. His work elevates brand clarity and product potential through visual dialogue, and incredible attention to detail.
         </h3>
         {# <h3 class="mb-8 md:mb-0 w-full max-w-[512px] text-black/50 dark:text-white/50 text-base font-regular leading-snug">
           Carl Beaverson is an award-winning Web Developer, currently living & working abroad. A partner at Groundcrew, his work is focused on creating bespoke, effective & engaging digital experiences.
