--- a/_includes/layouts/work.njk
+++ b/_includes/layouts/work.njk
@@ -23,7 +23,7 @@ layout: layouts/base.njk
       <div class="relative w-full max-w-[320px] sm:max-w-[384px] lg:max-w-[384px] 2xl:max-w-[600px] aspect-square rounded-tr-full rounded-bl-full rounded-br-full overflow-hidden gsap-circle">
         <div class="w-[100%] h-[100%] rounded-full" style="background-color: {{ bgColor }}"></div>
         <div class="absolute top-0 left-0 max-w-none w-[100%] h-[100%] gsap-circle-card">
-          <img src="/assets/img/works/{{ slug }}/{{ thumbnail }}" class="w-[100%] h-[100%] ml-[8%] mt-[5%] duration-200">
+          <img src="/assets/img/works/{{ year }}/{{ slug }}/{{ thumbnail }}" class="w-[100%] h-[100%] ml-[8%] mt-[5%] duration-200">
         </div>
       </div>
 
@@ -38,7 +38,7 @@ layout: layouts/base.njk
             {{ title }}
           </div>
           <h1 class="text-4xl sm:text-5xl 2xl:text-6xl font-regular mb-8 tracking-tight text-transparent bg-clip-text bg-gradient-to-r {{ headingColor }}">
-            {{ heading | safe }}
+            {{ headline | safe }}
           </h1>
         </div>
         <div>
