--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -930,6 +930,10 @@ video {
   max-width: 520px;
 }
 
+.max-w-\[560px\] {
+  max-width: 560px;
+}
+
 .flex-1 {
   flex: 1 1 0%;
 }
@@ -1201,6 +1205,26 @@ video {
   background-color: rgb(239 86 163 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#3C0000\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(60 0 0 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#873A02\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(135 58 2 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#360503\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(54 5 3 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#93B4B4\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(147 180 180 / var(--tw-bg-opacity));
+}
+
 .bg-gradient-to-r {
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }
@@ -1277,6 +1301,12 @@ video {
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
+.from-orange-400 {
+  --tw-gradient-from: #fb923c;
+  --tw-gradient-to: rgb(251 146 60 / 0);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
 .to-white\/0 {
   --tw-gradient-to: rgb(255 255 255 / 0);
 }
@@ -1311,6 +1341,10 @@ video {
 
 .to-amber-600 {
   --tw-gradient-to: #d97706;
+}
+
+.to-red-600 {
+  --tw-gradient-to: #dc2626;
 }
 
 .bg-clip-text {
@@ -1475,6 +1509,16 @@ video {
   line-height: 1;
 }
 
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
 .font-normal {
   font-weight: 400;
 }
@@ -1509,6 +1553,18 @@ video {
 
 .leading-snug {
   line-height: 1.375;
+}
+
+.leading-\[1\.1\] {
+  line-height: 1.1;
+}
+
+.leading-\[1\] {
+  line-height: 1;
+}
+
+.leading-\[1\.2\] {
+  line-height: 1.2;
 }
 
 .tracking-tight {
@@ -1600,6 +1656,10 @@ video {
 .text-neutral-200 {
   --tw-text-opacity: 1;
   color: rgb(229 229 229 / var(--tw-text-opacity));
+}
+
+.text-black\/60 {
+  color: rgb(0 0 0 / 0.6);
 }
 
 .underline {
@@ -1929,6 +1989,19 @@ video {
   .sm\:text-5xl {
     font-size: 3rem;
     line-height: 1;
+  }
+
+  .sm\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+
+  .sm\:font-medium {
+    font-weight: 500;
+  }
+
+  .sm\:leading-snug {
+    line-height: 1.375;
   }
 }
 
