--- a/index.njk
+++ b/index.njk
@@ -54,8 +54,9 @@ layout: layouts/base.njk
           <a class="h-[48px] md:h-[42px] pr-6 flex items-center font-medium text-sm text-white/40 hover:text-white/80 duration-200 cursor-pointer" @click="filterID = 'product'">Product</a>
         </li>
         <li class="flex items-center">
-          <a class="h-[48px] md:h-[42px] pr-6 flex items-center font-medium text-sm text-white/40 hover:text-white/80 duration-200 cursor-pointer" @click="filterID = 'ui-ux'">UI/UX</a>
+          <a class="h-[48px] md:h-[42px] pr-5 flex items-center font-medium text-sm text-white/40 hover:text-white/80 duration-200 cursor-pointer" @click="filterID = 'art-direction'">Art Direction</a>
         </li>
+       
         <li class="flex items-center">
           <a class="h-[48px] md:h-[42px] pr-6 flex items-center font-medium text-sm text-white/40 hover:text-white/80 duration-200 cursor-pointer" @click="filterID = 'identity'">Identity</a>
         </li>
@@ -63,8 +64,9 @@ layout: layouts/base.njk
           <a class="h-[48px] md:h-[42px] pr-6 flex items-center font-medium text-sm text-white/40 hover:text-white/80 duration-200 cursor-pointer" @click="filterID = 'development'">Development</a>
         </li>
         <li class="flex items-center">
-          <a class="h-[48px] md:h-[42px] pr-5 flex items-center font-medium text-sm text-white/40 hover:text-white/80 duration-200 cursor-pointer" @click="filterID = 'art-direction'">Art Direction</a>
+          <a class="h-[48px] md:h-[42px] pr-6 flex items-center font-medium text-sm text-white/40 hover:text-white/80 duration-200 cursor-pointer" @click="filterID = 'ui-ux'">UI/UX</a>
         </li>
+        
       </ul>
     </div>
   </div>
@@ -104,7 +106,7 @@ layout: layouts/base.njk
       </div> #}
 
       <div class="grid grid-cols-1 md:grid-cols-2 px-5 md:px-8 py-8">
-        <h3 class="mb-8 md:mb-0 w-full max-w-[500px] 2xl:max-w-[600px] text-black/50 dark:text-white/50 text-base 2xl:text-lg leading-snug font-medium">
+        <h3 class="mb-8 md:mb-0 w-full max-w-[500px] 2xl:max-w-[600px] text-black/60 dark:text-white/50 text-2xl sm:text-base 2xl:text-lg leading-[1.2] sm:leading-snug font-normal sm:font-medium">
           Jin Su Park is a multi-disciplinary Product Designer and Developer based in New York. His work elevates brand clarity and product potential through visual dialogue, and incredible attention to detail.
         </h3>
         {# <h3 class="mb-8 md:mb-0 w-full max-w-[512px] text-black/50 dark:text-white/50 text-base font-regular leading-snug">
@@ -113,11 +115,11 @@ layout: layouts/base.njk
         <div class="md:flex justify-end items-center">
           <ul class="grid grid-cols-2 md:gap-20">
             <li>
-              <div class="text-xl font-medium text-black/80 dark:text-white/80">65</div>
+              <div class="text-2xl font-medium text-black/80 dark:text-white/80">65</div>
               <div class="text-sm font-medium text-black/50 dark:text-white/50">Projects Published</div>
             </li>
             <li>
-              <div class="text-xl font-medium text-black/80 dark:text-white/80">4k+</div>
+              <div class="text-2xl font-medium text-black/80 dark:text-white/80">4k+</div>
               <div class="text-sm font-medium text-black/50 dark:text-white/50">Code Contriutions</div>
             </li>
           </ul>
@@ -178,8 +180,8 @@ layout: layouts/base.njk
         <li class="bg-[#F6F6F6] dark:bg-[#1B1B1B] overflow-hidden" x-show="filterID == 'all' || filterID == 'branding'" x-transition.enter.duration.600ms>
           <a href="/works/2022/siwan" class="relative flex items-center justify-center aspect-square xl:aspect-[4/3] group/thumb">
             <div class="relative w-[60%] xl:w-[50%] aspect-square rounded-tr-full rounded-bl-full rounded-br-full overflow-hidden">
-              <div class="bg-[#c69874] w-[100%] h-[100%] rounded-full"></div>
-              <img src="/assets/img/works/2022/siwan/siwan-thumb.jpg" class="absolute top-0 left-0 max-w-none w-[100%] h-[100%] ml-[15%] group-hover/thumb:ml-[5%] mt-[5%] duration-200">
+              <div class="bg-[#360503] w-[100%] h-[100%] rounded-full"></div>
+              <img src="/assets/img/works/2022/siwan/siwan-thumb.png" class="absolute top-0 left-0 max-w-none w-[100%] h-[100%] ml-[15%] group-hover/thumb:ml-[5%] mt-[5%] duration-200">
             </div>
           </a>
         </li>
@@ -192,10 +194,10 @@ layout: layouts/base.njk
           </a>
         </li>
         <li class="bg-[#F6F6F6] dark:bg-[#1B1B1B] overflow-hidden" x-show="filterID == 'all' || filterID == 'branding'" x-transition.enter.duration.600ms>
-          <a href="/works/sample" class="relative flex items-center justify-center aspect-square xl:aspect-[4/3] group/thumb">
+          <a href="/works/north-four" class="relative flex items-center justify-center aspect-square xl:aspect-[4/3] group/thumb">
             <div class="relative w-[60%] xl:w-[50%] aspect-square rounded-tr-full rounded-bl-full rounded-br-full overflow-hidden">
-              <div class="bg-white w-[100%] h-[100%] rounded-full"></div>
-              <img src="/assets/img/works/sample/sample-thumb-3.png" class="absolute top-0 left-0 max-w-none w-[100%] h-[100%] ml-[15%] group-hover/thumb:ml-[5%] mt-[5%] duration-200">
+              <div class="bg-[#93B4B4] w-[100%] h-[100%] rounded-full"></div>
+              <img src="/assets/img/works/2022/north-four/north-four-thumb.png" class="absolute top-0 left-0 max-w-none w-[100%] h-[100%] ml-[15%] group-hover/thumb:ml-[5%] mt-[5%] duration-200">
             </div>
           </a>
         </li>
