--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1662,6 +1662,10 @@ video {
   color: rgb(0 0 0 / 0.6);
 }
 
+.text-black\/90 {
+  color: rgb(0 0 0 / 0.9);
+}
+
 .underline {
   text-decoration-line: underline;
 }
