--- a/_includes/layouts/work.njk
+++ b/_includes/layouts/work.njk
@@ -37,19 +37,19 @@ layout: layouts/base.njk
           <div class="mb-4 text-base text-neutral-400 dark:text-neutral-600 font-medium">
             {{ title }}
           </div>
-          <h1 class="text-4xl sm:text-5xl 2xl:text-6xl font-regular mb-8 tracking-tight text-transparent bg-clip-text bg-gradient-to-r {{ headingColor }}">
+          <h1 class="text-4xl sm:text-5xl 2xl:text-6xl font-regular mb-8 tracking-tight {{ headingColor }}">
             {{ headline | safe }}
           </h1>
         </div>
         <div>
           <div x-data="{ open: false }">
-            <p class="mb-5 last:mb-0 w-full max-w-[600px] 2xl:max-w-[700px] text-neutral-500 dark:text-neutral-500 text-justify text-base 2xl:text-lg leading-snug font-medium">
+            <p class="mb-5 last:mb-0 w-full max-w-[600px] 2xl:max-w-[700px] text-neutral-700 dark:text-neutral-500 text-justify text-lg 2xl:text-lg leading-snug font-regular">
               {{ excerpt }}
             </p>
 
             <a x-show="!open" @click="open = true" class="font-medium text-base 2xl:text-lg text-neutral-700 hover:text-neutral-600 dark:text-neutral-200 dark:hover:text-neutral-300 cursor-pointer">Read more</a>
 
-            <div class="w-full max-w-[600px] 2xl:max-w-[700px] text-neutral-500 dark:text-neutral-500 text-justify text-base 2xl:text-lg leading-snug font-medium markdown" x-show="open" x-transition.opacity>
+            <div class="w-full max-w-[600px] 2xl:max-w-[700px] text-neutral-700 dark:text-neutral-500 text-justify text-lg 2xl:text-lg leading-snug font-regular markdown" x-show="open" x-transition.opacity>
               {{ content | safe }}
             </div>
           </div>
@@ -79,11 +79,11 @@ layout: layouts/base.njk
 
       <div class="grid grid-cols-2 gap-1">
         {%- for workImage in workImages -%}
-          <div class="relative {% if workImage.col == 1 %}col-span-2 sm:col-span-1{% else %}col-span-2{% endif %} ">
+          <div class="relative {% if workImage.col == 2 %}col-span-2{% else %}col-span-2 sm:col-span-1{% endif %} ">
             <div class="absolute top-0 left-0 p-4 text-sm font-medium mix-blend-difference text-white">
               {{ workImage.alt | safe }}
             </div>
-            <img src="/assets/img/works/{{ year }}/{{ slug }}/{{ workImage.url }}" class="w-full aspect-[4/3] object-cover">
+            <img src="/assets/img/works/{{ year }}/{{ slug }}/{{ workImage.url }}" class="w-full {% if workImage.col == 2 %}col-span-2 aspect-video{% else %}aspect-[4/3]{% endif %} object-cover">
           </div>
         {%- endfor -%}
 
