--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -798,16 +798,20 @@ video {
   aspect-ratio: 4/3;
 }
 
+.aspect-video {
+  aspect-ratio: 16 / 9;
+}
+
+.h-8 {
+  height: 2rem;
+}
+
 .h-4 {
   height: 1rem;
 }
 
 .h-\[48px\] {
   height: 48px;
-}
-
-.h-6 {
-  height: 1.5rem;
 }
 
 .h-\[450px\] {
@@ -820,6 +824,10 @@ video {
 
 .h-14 {
   height: 3.5rem;
+}
+
+.h-6 {
+  height: 1.5rem;
 }
 
 .h-2 {
@@ -838,8 +846,28 @@ video {
   height: 0.25rem;
 }
 
+.h-3 {
+  height: 0.75rem;
+}
+
+.h-5 {
+  height: 1.25rem;
+}
+
+.h-7 {
+  height: 1.75rem;
+}
+
 .w-full {
   width: 100%;
+}
+
+.w-px {
+  width: 1px;
+}
+
+.w-8 {
+  width: 2rem;
 }
 
 .w-4 {
@@ -848,10 +876,6 @@ video {
 
 .w-\[8px\] {
   width: 8px;
-}
-
-.w-px {
-  width: 1px;
 }
 
 .w-\[60\%\] {
@@ -874,10 +898,6 @@ video {
   width: 0.75rem;
 }
 
-.w-8 {
-  width: 2rem;
-}
-
 .w-16 {
   width: 4rem;
 }
@@ -898,8 +918,8 @@ video {
   max-width: 320px;
 }
 
-.max-w-\[540px\] {
-  max-width: 540px;
+.max-w-\[500px\] {
+  max-width: 500px;
 }
 
 .max-w-none {
@@ -920,18 +940,6 @@ video {
 
 .max-w-\[384px\] {
   max-width: 384px;
-}
-
-.max-w-\[500px\] {
-  max-width: 500px;
-}
-
-.max-w-\[520px\] {
-  max-width: 520px;
-}
-
-.max-w-\[560px\] {
-  max-width: 560px;
 }
 
 .flex-1 {
@@ -1033,6 +1041,14 @@ video {
   justify-content: space-between;
 }
 
+.gap-6 {
+  gap: 1.5rem;
+}
+
+.gap-2 {
+  gap: 0.5rem;
+}
+
 .gap-5 {
   gap: 1.25rem;
 }
@@ -1059,6 +1075,10 @@ video {
 
 .gap-10 {
   gap: 2.5rem;
+}
+
+.gap-3 {
+  gap: 0.75rem;
 }
 
 .space-y-6 > :not([hidden]) ~ :not([hidden]) {
@@ -1131,6 +1151,26 @@ video {
   border-color: rgb(64 64 64 / var(--tw-border-opacity));
 }
 
+.bg-\[\#EDEDED\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(237 237 237 / var(--tw-bg-opacity));
+}
+
+.bg-neutral-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(212 212 212 / var(--tw-bg-opacity));
+}
+
+.bg-red-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(185 28 28 / var(--tw-bg-opacity));
+}
+
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
 .bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
@@ -1141,38 +1181,28 @@ video {
   background-color: rgb(38 38 38 / var(--tw-bg-opacity));
 }
 
-.bg-neutral-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(82 82 82 / var(--tw-bg-opacity));
-}
-
-.bg-white {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
 .bg-\[\#F6F6F6\] {
   --tw-bg-opacity: 1;
   background-color: rgb(246 246 246 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#c69874\] {
+.bg-\[\#360503\] {
   --tw-bg-opacity: 1;
-  background-color: rgb(198 152 116 / var(--tw-bg-opacity));
+  background-color: rgb(54 5 3 / var(--tw-bg-opacity));
 }
 
-.bg-neutral-300 {
+.bg-\[\#EF56A3\] {
   --tw-bg-opacity: 1;
-  background-color: rgb(212 212 212 / var(--tw-bg-opacity));
+  background-color: rgb(239 86 163 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#93B4B4\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(147 180 180 / var(--tw-bg-opacity));
 }
 
 .bg-neutral-200\/40 {
   background-color: rgb(229 229 229 / 0.4);
-}
-
-.bg-\[\#EDEDED\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(237 237 237 / var(--tw-bg-opacity));
 }
 
 .bg-\[\#535353\] {
@@ -1190,6 +1220,11 @@ video {
   background-color: rgb(229 229 229 / var(--tw-bg-opacity));
 }
 
+.bg-neutral-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(82 82 82 / var(--tw-bg-opacity));
+}
+
 .bg-neutral-700 {
   --tw-bg-opacity: 1;
   background-color: rgb(64 64 64 / var(--tw-bg-opacity));
@@ -1200,29 +1235,34 @@ video {
   background-color: rgb(115 115 115 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#EF56A3\] {
+.bg-pink-400 {
   --tw-bg-opacity: 1;
-  background-color: rgb(239 86 163 / var(--tw-bg-opacity));
+  background-color: rgb(244 114 182 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#3C0000\] {
+.bg-neutral-400 {
   --tw-bg-opacity: 1;
-  background-color: rgb(60 0 0 / var(--tw-bg-opacity));
+  background-color: rgb(163 163 163 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#873A02\] {
+.bg-red-600 {
   --tw-bg-opacity: 1;
-  background-color: rgb(135 58 2 / var(--tw-bg-opacity));
+  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#360503\] {
+.bg-amber-600 {
   --tw-bg-opacity: 1;
-  background-color: rgb(54 5 3 / var(--tw-bg-opacity));
+  background-color: rgb(217 119 6 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#93B4B4\] {
+.bg-\[\#960505\] {
   --tw-bg-opacity: 1;
-  background-color: rgb(147 180 180 / var(--tw-bg-opacity));
+  background-color: rgb(150 5 5 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#389D2D\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(56 157 45 / var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-r {
@@ -1379,14 +1419,14 @@ video {
   padding-bottom: 1rem;
 }
 
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
+
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
-}
-
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
 }
 
 .py-8 {
@@ -1399,6 +1439,11 @@ video {
   padding-bottom: 0.75rem;
 }
 
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
 .px-8 {
   padding-left: 2rem;
   padding-right: 2rem;
@@ -1407,6 +1452,16 @@ video {
 .py-6 {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
+}
+
+.px-1 {
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+}
+
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
 .pl-5 {
@@ -1465,13 +1520,17 @@ video {
   font-family: PPNeueMontreal, sans-serif;
 }
 
-.text-base {
-  font-size: 1rem;
-  line-height: 1.5rem;
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 
-.text-\[15px\] {
-  font-size: 15px;
+.text-\[13px\] {
+  font-size: 13px;
+}
+
+.text-\[12px\] {
+  font-size: 12px;
 }
 
 .text-sm {
@@ -1479,9 +1538,18 @@ video {
   line-height: 1.25rem;
 }
 
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
+.text-\[15px\] {
+  font-size: 15px;
 }
 
 .text-4xl {
@@ -1494,8 +1562,8 @@ video {
   line-height: 1rem;
 }
 
-.text-lg {
-  font-size: 1.125rem;
+.text-xl {
+  font-size: 1.25rem;
   line-height: 1.75rem;
 }
 
@@ -1507,11 +1575,6 @@ video {
 .text-6xl {
   font-size: 3.75rem;
   line-height: 1;
-}
-
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
 }
 
 .text-3xl {
@@ -1551,20 +1614,12 @@ video {
   line-height: 1;
 }
 
-.leading-snug {
-  line-height: 1.375;
-}
-
-.leading-\[1\.1\] {
-  line-height: 1.1;
-}
-
-.leading-\[1\] {
-  line-height: 1;
-}
-
 .leading-\[1\.2\] {
   line-height: 1.2;
+}
+
+.leading-snug {
+  line-height: 1.375;
 }
 
 .tracking-tight {
@@ -1585,29 +1640,35 @@ video {
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
-.text-black\/40 {
-  color: rgb(0 0 0 / 0.4);
-}
-
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-neutral-700 {
+  --tw-text-opacity: 1;
+  color: rgb(64 64 64 / var(--tw-text-opacity));
 }
 
 .text-white\/40 {
   color: rgb(255 255 255 / 0.4);
 }
 
-.text-white\/30 {
-  color: rgb(255 255 255 / 0.3);
+.text-black\/40 {
+  color: rgb(0 0 0 / 0.4);
 }
 
-.text-black\/50 {
-  color: rgb(0 0 0 / 0.5);
+.text-neutral-900 {
+  --tw-text-opacity: 1;
+  color: rgb(23 23 23 / var(--tw-text-opacity));
 }
 
 .text-black\/80 {
   color: rgb(0 0 0 / 0.8);
+}
+
+.text-black\/50 {
+  color: rgb(0 0 0 / 0.5);
 }
 
 .text-neutral-400 {
@@ -1619,11 +1680,6 @@ video {
   color: transparent;
 }
 
-.text-neutral-900 {
-  --tw-text-opacity: 1;
-  color: rgb(23 23 23 / var(--tw-text-opacity));
-}
-
 .text-neutral-500 {
   --tw-text-opacity: 1;
   color: rgb(115 115 115 / var(--tw-text-opacity));
@@ -1632,11 +1688,6 @@ video {
 .text-neutral-300 {
   --tw-text-opacity: 1;
   color: rgb(212 212 212 / var(--tw-text-opacity));
-}
-
-.text-neutral-700 {
-  --tw-text-opacity: 1;
-  color: rgb(64 64 64 / var(--tw-text-opacity));
 }
 
 .text-neutral-800 {
@@ -1658,12 +1709,29 @@ video {
   color: rgb(229 229 229 / var(--tw-text-opacity));
 }
 
-.text-black\/60 {
-  color: rgb(0 0 0 / 0.6);
+.text-pink-400 {
+  --tw-text-opacity: 1;
+  color: rgb(244 114 182 / var(--tw-text-opacity));
 }
 
-.text-black\/90 {
-  color: rgb(0 0 0 / 0.9);
+.text-amber-600 {
+  --tw-text-opacity: 1;
+  color: rgb(217 119 6 / var(--tw-text-opacity));
+}
+
+.text-amber-700 {
+  --tw-text-opacity: 1;
+  color: rgb(180 83 9 / var(--tw-text-opacity));
+}
+
+.text-teal-600 {
+  --tw-text-opacity: 1;
+  color: rgb(13 148 136 / var(--tw-text-opacity));
+}
+
+.text-green-700 {
+  --tw-text-opacity: 1;
+  color: rgb(21 128 61 / var(--tw-text-opacity));
 }
 
 .underline {
@@ -1687,6 +1755,12 @@ video {
   mix-blend-mode: difference;
 }
 
+.shadow-md {
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .shadow-lg {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
@@ -1696,6 +1770,12 @@ video {
 .shadow {
   --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-sm {
+  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -1756,6 +1836,10 @@ video {
   transition-duration: 200ms;
 }
 
+.duration-100 {
+  transition-duration: 100ms;
+}
+
 .ease-out {
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
@@ -1774,7 +1858,7 @@ video {
 @font-face {
   font-family: 'PPNeueMontreal';
 
-  src: url('../fonts/PPNeueMontreal/PPNeueMontreal-Regular.woff2') format('woff2');
+  src: url('../fonts/PPNeueMontreal/PPNeueMontreal-Book.woff2') format('woff2');
 
   font-weight: 400;
 }
@@ -1803,23 +1887,34 @@ video {
   border-bottom-width: 0px;
 }
 
+.hover\:translate-y-\[2px\]:hover {
+  --tw-translate-y: 2px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .hover\:scale-110:hover {
   --tw-scale-x: 1.1;
   --tw-scale-y: 1.1;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.hover\:text-black\/80:hover {
-  color: rgb(0 0 0 / 0.8);
-}
-
 .hover\:text-white\/80:hover {
   color: rgb(255 255 255 / 0.8);
+}
+
+.hover\:text-black\/80:hover {
+  color: rgb(0 0 0 / 0.8);
 }
 
 .hover\:text-neutral-600:hover {
   --tw-text-opacity: 1;
   color: rgb(82 82 82 / var(--tw-text-opacity));
+}
+
+.hover\:shadow-sm:hover {
+  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .group\/thumb:hover .group-hover\/thumb\:ml-\[5\%\] {
@@ -1844,11 +1939,6 @@ video {
 .dark .dark\:bg-neutral-700 {
   --tw-bg-opacity: 1;
   background-color: rgb(64 64 64 / var(--tw-bg-opacity));
-}
-
-.dark .dark\:bg-neutral-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(115 115 115 / var(--tw-bg-opacity));
 }
 
 .dark .dark\:bg-\[\#131313\] {
@@ -1885,26 +1975,26 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.dark .dark\:text-white\/40 {
-  color: rgb(255 255 255 / 0.4);
-}
-
-.dark .dark\:text-white\/50 {
-  color: rgb(255 255 255 / 0.5);
+.dark .dark\:text-neutral-200 {
+  --tw-text-opacity: 1;
+  color: rgb(229 229 229 / var(--tw-text-opacity));
 }
 
 .dark .dark\:text-white\/80 {
   color: rgb(255 255 255 / 0.8);
 }
 
+.dark .dark\:text-white\/50 {
+  color: rgb(255 255 255 / 0.5);
+}
+
+.dark .dark\:text-white\/40 {
+  color: rgb(255 255 255 / 0.4);
+}
+
 .dark .dark\:text-neutral-600 {
   --tw-text-opacity: 1;
   color: rgb(82 82 82 / var(--tw-text-opacity));
-}
-
-.dark .dark\:text-neutral-200 {
-  --tw-text-opacity: 1;
-  color: rgb(229 229 229 / var(--tw-text-opacity));
 }
 
 .dark .dark\:text-neutral-400 {
@@ -1953,10 +2043,6 @@ video {
     margin-right: 2rem;
   }
 
-  .sm\:hidden {
-    display: none;
-  }
-
   .sm\:h-\[550px\] {
     height: 550px;
   }
@@ -1971,10 +2057,6 @@ video {
 
   .sm\:gap-1 {
     gap: 0.25rem;
-  }
-
-  .sm\:gap-10 {
-    gap: 2.5rem;
   }
 
   .sm\:px-8 {
@@ -1993,19 +2075,6 @@ video {
   .sm\:text-5xl {
     font-size: 3rem;
     line-height: 1;
-  }
-
-  .sm\:text-base {
-    font-size: 1rem;
-    line-height: 1.5rem;
-  }
-
-  .sm\:font-medium {
-    font-weight: 500;
-  }
-
-  .sm\:leading-snug {
-    line-height: 1.375;
   }
 }
 
@@ -2030,6 +2099,10 @@ video {
     width: auto;
   }
 
+  .md\:max-w-\[610px\] {
+    max-width: 610px;
+  }
+
   .md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
@@ -2050,6 +2123,15 @@ video {
   .md\:py-6 {
     padding-top: 1.5rem;
     padding-bottom: 1.5rem;
+  }
+
+  .md\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+
+  .md\:leading-\[1\.3\] {
+    line-height: 1.3;
   }
 }
 
@@ -2115,5 +2197,9 @@ video {
   .\32xl\:text-6xl {
     font-size: 3.75rem;
     line-height: 1;
+  }
+
+  .\32xl\:leading-snug {
+    line-height: 1.375;
   }
 }
