--- a/index.njk
+++ b/index.njk
@@ -299,6 +299,14 @@ layout: layouts/base.njk
             </div>
           </a>
         </li>
+        <li class="bg-[#F6F6F6] dark:bg-[#1B1B1B] overflow-hidden" x-show="filterID == 'all' || filterID == 'branding'" x-transition.enter.duration.600ms>
+          <a href="/work/2016/flora" class="relative flex items-center justify-center aspect-square xl:aspect-[4/3] group/thumb">
+            <div class="relative w-[60%] xl:w-[50%] aspect-square rounded-tr-full rounded-bl-full rounded-br-full overflow-hidden">
+              <div class="bg-[#313131] w-[100%] h-[100%] rounded-full"></div>
+              <img src="/assets/img/work/2016/flora/flora-thumb.png" class="absolute top-0 left-0 max-w-none w-[100%] h-[100%] ml-[15%] group-hover/thumb:ml-[5%] mt-[5%] duration-200">
+            </div>
+          </a>
+        </li>
 
 
 
