--- a/index.njk
+++ b/index.njk
@@ -307,39 +307,48 @@ layout: layouts/base.njk
             </div>
           </a>
         </li>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
         <li class="bg-[#F6F6F6] dark:bg-[#1B1B1B] overflow-hidden" x-show="filterID == 'all' || filterID == 'branding'" x-transition.enter.duration.600ms>
-          <a href="/work/2022/sample" class="relative flex items-center justify-center aspect-square xl:aspect-[4/3] group/thumb">
+          <a href="/work/2015/atrium-theatre-gala" class="relative flex items-center justify-center aspect-square xl:aspect-[4/3] group/thumb">
             <div class="relative w-[60%] xl:w-[50%] aspect-square rounded-tr-full rounded-bl-full rounded-br-full overflow-hidden">
               <div class="bg-white w-[100%] h-[100%] rounded-full"></div>
-              <img src="/assets/img/work/sample/sample-thumb.png" class="absolute top-0 left-0 max-w-none w-[100%] h-[100%] ml-[15%] group-hover/thumb:ml-[5%] mt-[5%] duration-200">
+              <img src="/assets/img/work/2015/atrium-theatre-gala/atrium-theatre-gala-thumb.png" class="absolute top-0 left-0 max-w-none w-[100%] h-[100%] ml-[15%] group-hover/thumb:ml-[5%] mt-[5%] duration-200">
             </div>
           </a>
         </li>
+        <li class="bg-[#F6F6F6] dark:bg-[#1B1B1B] overflow-hidden" x-show="filterID == 'all' || filterID == 'branding'" x-transition.enter.duration.600ms>
+          <a href="/work/2010/omega-code" class="relative flex items-center justify-center aspect-square xl:aspect-[4/3] group/thumb">
+            <div class="relative w-[60%] xl:w-[50%] aspect-square rounded-tr-full rounded-bl-full rounded-br-full overflow-hidden">
+              <div class="bg-black w-[100%] h-[100%] rounded-full"></div>
+              <img src="/assets/img/work/2010/omega-code/omega-code-thumb.png" class="absolute top-0 left-0 max-w-none w-[100%] h-[100%] ml-[15%] group-hover/thumb:ml-[5%] mt-[5%] duration-200">
+            </div>
+          </a>
+        </li>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        
         <li class="bg-[#F6F6F6] dark:bg-[#1B1B1B] overflow-hidden" x-show="filterID == 'all' || filterID == 'branding'" x-transition.enter.duration.600ms>
           <a href="/work/2022/sample" class="relative flex items-center justify-center aspect-square xl:aspect-[4/3] group/thumb">
             <div class="relative w-[60%] xl:w-[50%] aspect-square rounded-tr-full rounded-bl-full rounded-br-full overflow-hidden">
